--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/15.resource-pool-management/2.assign-a-resource-pool-to-a-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/15.resource-pool-management/2.assign-a-resource-pool-to-a-tenant.md
@@ -15,7 +15,7 @@ obclient> CREATE TENANT IF NOT EXISTS test_tenant charset='utf8mb4', replica_num
 * 每个资源池仅能绑定给一个租户，每个租户可以拥有多个资源池。但是，在创建租户时，一个租户仅支持指定一个资源池。
 * 租户在 Zone 内被分配的所有资源总量为：Unit 规格 \* Unit 数量。
 
-创建租户的更多信息请参见 [新建租户](../../4.manage-tenants/2.create-a-tenant.md)。
+创建租户的更多信息请参见 [创建租户](../2.manage-create-tenant.md)。
 
 ## 修改租户资源池列表时分配资源池
 
@@ -43,11 +43,11 @@ ALTER TENANT tenant_name RESOURCE_POOL_LIST [=](pool_name [, pool_name...]) ;
 
 1. 集群中当前仅 `z1`、`z2`、`z3` 三个 Zone，需要在集群中增加 `z4`、`z5` 两个 Zone。
 
-   在集群中增加 Zone 的具体操作请参见 [增加或删除 Zone](../../1.manage-clusters/4.manage-zones-in-a-cluster/2.add-or-remove-a-zone.md)。
+   在集群中增加 Zone 的具体操作请参见 [添加 Zone](../../../1.cluster-management/3.common-cluster-operations/8.add-a-zone.md)。
 
 2. 在 `z4`、`z5` 两个 Zone 上各添加一台 OBServer 节点。
 
-   向 Zone 内添加 OBServer 节点的具体操作请参见 [添加节点](../../1.manage-clusters/5.manage-observer/1.add-observer.md)。
+   向 Zone 内添加 OBServer 节点的具体操作请参见 [添加节点](../../../1.cluster-management/3.common-cluster-operations/4.add-a-node.md)。
 
 3. 使用 `root` 用户登录 `sys` 租户，为租户 `tenant1` 在 `z4`、`z5` 上添加资源。
 
@@ -67,7 +67,7 @@ ALTER TENANT tenant_name RESOURCE_POOL_LIST [=](pool_name [, pool_name...]) ;
 
 4. 通过修改租户 Locality 来增加副本。
 
-   根据 Locality 的变更规则，每次只能增加一个 Zone 内的 Locality，Locality 的变更规则相关信息请参见 [Locality 概述](../../../4.replica-management/5.locality-management/1.tenant-locality-overview.md)。
+   根据 Locality 的变更规则，每次只能增加一个 Zone 内的 Locality，Locality 的变更规则相关信息请参见 [修改 Locality](../../../3.replica-management/2.replica-distribution/2.locality-common-operations/2.modify-locality.md)。
 
    ```sql
    obclient>ALTER TENANT tenant1 LOCALITY='F@z1,F@z2,F@z3,F@z4';
