--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/4.view-tenant-information.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/4.view-tenant-information.md
@@ -56,7 +56,7 @@ obclient [oceanbase]> SELECT * FROM DBA_OB_RESOURCE_POOLS;
 7 rows in set
 ```
 
-`DBA_OB_RESOURCE_POOLS` 视图参数详细说明，参见 [DBA_OB_RESOURCE_POOLS](../../../7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.m)。
+`DBA_OB_RESOURCE_POOLS` 视图参数详细说明，参见 [DBA_OB_RESOURCE_POOLS](../../../7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.md)。
 
 ## 查看所有租户信息
 
