--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/4.adjust-primary-zone.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/4.adjust-primary-zone.md
@@ -36,7 +36,7 @@
    ALTER SYSTEM SET enable_rebalance = true;
    ```
 
-更多配置项 `enable_rebalance` 的详细说明，请参见 [enable_rebalance](../../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/79.enable_rebalance.md)。
+更多配置项 `enable_rebalance` 的详细说明，请参见 [enable_rebalance](../../../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/4.tenant-level-configuration-items/67.enable_rebalance.md)。
 
 ## 增加 Primary Zone
 
