--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.locality-common-operations/5.adjust-replica-distribution.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.locality-common-operations/5.adjust-replica-distribution.md
@@ -6,9 +6,9 @@
 
 ## 前提条件
 
-变更 Locality 之前，需要确认待变更的 Zone 上资源单元和资源池的状态。如果 Zone 上的节点资源不足导致无法存放租户需要的资源单元，将导致无法进行 Locality 变更。
+变更 Locality 之前，需要确认待变更的 Zone 上各节点的资源分配情况。如果 Zone 上的节点资源不足导致无法存放租户需要的资源单元，将导致无法进行 Locality 变更。
 
-有关 Zone 上资源单元和资源池的状态的检查方法，参见 [查看集群的资源信息](../../../../7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/10.view-the-resource-information-of-a-cluster.md)。
+有关 Zone 上各节点的资源分配情况，请参见 [查看租户和资源信息](../../../2.tenant-management/6.common-tenant-operations/4.view-tenant-information.md)。
 
 ## 注意事项
 
