--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/3.log-transport-service/6.optimize-log-synchronization-performance.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/3.log-transport-service/6.optimize-log-synchronization-performance.md
@@ -13,7 +13,7 @@
 
 在备租户的日志同步过程中，如果发现备租户的同步进度与主租户相差较大，则表示备租户的日志同步可能落后于主租户。您可以在备租户与恢复源之间带宽足够的前提下，尝试通过修改租户级配置项 `log_restore_concurrency` 来调整备租户恢复日志的并发度，进而提高备租户的日志同步性能。
 
-查看备租户日志同步状态的详细操作，请参见 [查看同步进度](4.View-the-log-synchronization-progress.md)。
+查看备租户日志同步状态的详细操作，请参见 [查看日志同步进度](4.view-the-log-synchronization-progress.md)。
 
 1. 使用管理员用户登录备租户或备租户所在集群的 `sys` 租户。
 
@@ -103,6 +103,6 @@
 
 ## 相关文档
 
-* [查看日志同步进度](4.View-the-log-synchronization-progress.md)
+* [查看日志同步进度](4.view-the-log-synchronization-progress.md)
 
 * [查看归档进度](../../../6.backup-and-recovery/3.log-archive/7.view-log-archive-history.md)
