--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md
@@ -118,6 +118,6 @@
 
 用户权限及授权相关操作介绍，请阅读以下内容：
 
-* [用户及权限概述](../../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md)
+* [用户及权限概述](../1.user-and-permission-overview.md)
 
 * [修改用户权限](../2.permission-of-mysql-mode/5.modify-user-permissions-of-mysql-mode.md)
