--- a/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/9.lock-a-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/9.lock-a-table-of-oracle-mode.md
@@ -98,10 +98,10 @@ LOCK TABLE [schema.]table_name[,[schema.]table_name ...] IN lockmode MODE [NOWAI
 
   <main id="notice" type='notice'>
   <h4>注意</h4>
-  <p>当指定 <code>WAIT integer</code> 时，语句执行的超时时间取决于 <code>integer</code> 、<a href="../../../../5.system-reference/3.system-variable-of-oracle-mode/89.ob_query_timeout-of-oracle-mode.md">ob_query_timeout</a> 及 <a href="../../../../../5.system-reference/3.system-variable-of-oracle-mode/102.ob_trx_timeout-of-oracle-mode.md">ob_trx_timeout</a> 的值，并以三者中的最小值作为语句执行的实际超时时间。例如，指定 <code>WAIT 10</code>，且 <code>ob_query_timeout</code>、<code>ob_trx_timeout</code>均为默认值，则等待锁冲突的超时时间为 1000000 us 即 1s。</p>
+  <p>当指定 <code>WAIT integer</code> 时，语句执行的超时时间取决于 <code>integer</code> 、<a href="../../../8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/90.ob_query_timeout-global.md">ob_query_timeout</a> 及 <a href="../../../8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/103.ob_trx_timeout-global.md">ob_trx_timeout</a> 的值，并以三者中的最小值作为语句执行的实际超时时间。例如，指定 <code>WAIT 10</code>，且 <code>ob_query_timeout</code>、<code>ob_trx_timeout</code>均为默认值，则等待锁冲突的超时时间为 1000000 us 即 1s。</p>
   </main>
   
-  如果既不指定 `NOWAIT` 也不指定 `WAIT integer`，则语句执行的超时时间将取决于 [ob_query_timeout](../../../../5.system-reference/3.system-variable-of-oracle-mode/89.ob_query_timeout-of-oracle-mode.md) 和 [ob_trx_timeout](../../../../../5.system-reference/3.system-variable-of-oracle-mode/102.ob_trx_timeout-of-oracle-mode.md) 之间的最小值。
+  如果既不指定 `NOWAIT` 也不指定 `WAIT integer`，则语句执行的超时时间将取决于 [ob_query_timeout](../../../8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/90.ob_query_timeout-global.md) 和 [ob_trx_timeout](../../../8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/103.ob_trx_timeout-global.md) 之间的最小值。
   
  
 对表 `tbl1` 上 EXCLUSIVE 锁，示例如下。
