--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.locality-common-operations/3.add-replica.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.locality-common-operations/3.add-replica.md
@@ -8,9 +8,9 @@
 
 增加副本之前，首先需要确认租户在目标 Zone 上是否有资源池，如果没有，则需要调整现有资源池的 Zone 列表，或者新增一个资源池给租户，如果新增资源池，要求资源池的 Unit 个数与租户已有的资源池一致，调整资源池或新增资源池的详细操作，参见 [修改资源池属性](../../../2.tenant-management/6.common-tenant-operations/9.modify-resource-pool-properties.md) 或 [创建资源池](../../../2.tenant-management/6.common-tenant-operations/2.manage-create-tenant.md)。
 
-同时还需要确认待变更的 Zone 上资源单元和资源池的状态。如果 Zone 上的节点资源不足导致无法存放租户需要的资源单元，将导致无法进行 Locality 变更。
+同时还需要确认待变更的 Zone 上各节点的资源分配情况。如果 Zone 上的节点资源不足导致无法存放租户需要的资源单元，将导致无法进行 Locality 变更。
 
-有关 Zone 上资源单元和资源池的状态的检查方法，参见 [查看集群的资源信息](../../../../7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/10.view-the-resource-information-of-a-cluster.md)。
+有关 Zone 上各节点的资源分配情况，请参见 [查看租户和资源信息](../../../2.tenant-management/6.common-tenant-operations/4.view-tenant-information.md)。
 
 ## 注意事项
 
