--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/3.log-transport-service/4.view-the-log-synchronization-progress.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/3.log-transport-service/4.view-the-log-synchronization-progress.md
@@ -31,7 +31,7 @@
 
    查询结果中，`SCN_TO_TIMESTAMP(SYNC_SCN)` 列显示了备租户当前的同步进度。您可以将该时间与实际时间进行对比，如果相差较多，则表示备租户的同步进度落后于主租户。
 
-   有关 `DBA_OB_TENANTS` 视图的更多说明，请参见 [DBA_OB_TENANTS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
+   有关 `DBA_OB_TENANTS` 视图的更多说明，请参见 [DBA_OB_TENANTS](../../../../7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/193.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
 
 3. （可选）确认备租户同步进度较慢之后，可以执行以下命令，进一步查询同步进最慢的日志流。
 
@@ -94,7 +94,7 @@
 
    查询结果中，`SCN_TO_TIMESTAMP(SYNC_SCN)` 列显示了备租户当前的同步进度。您可以将该时间与实际时间进行对比，如果相差较多，则表示备租户的同步进度落后于主租户。
 
-   有关 `DBA_OB_TENANTS` 视图的更多说明，请参见 [DBA_OB_TENANTS（MySQL 模式）](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md) 和 [DBA_OB_TENANTS（Oracle 模式）](../../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/261.dba_ob_tenants-oracle.md)。
+   有关 `DBA_OB_TENANTS` 视图的更多说明，请参见 [DBA_OB_TENANTS（MySQL 模式）](../../../../7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/193.oceanbase-dba_ob_tenants-of-mysql-mode.md) 和 [DBA_OB_TENANTS（Oracle 模式）](../../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/261.dba_ob_tenants-oracle.md)。
 
 3. （可选）确认备租户同步进度较慢之后，可以执行以下命令，进一步查询同步进最慢的日志流。
 
