--- a/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/10.manage-external-tables-of-mysql-mode/2.create-a-external-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/10.manage-external-tables-of-mysql-mode/2.create-a-external-table-of-mysql-mode.md
@@ -90,7 +90,7 @@ FORMAT = (
 
     * 对于使用本地 Location 格式的场景，在通过系统变量 `secure_file_priv` 配置 OceanBase 数据库有权限访问的文件路径时，要求 `secure_file_priv` 必须是 `local_file_path` 的上层目录，即 `local_file_path` 只能是 `secure_file_priv` 路径的子路径。
 
-       系统变量 `secure_file_priv` 用于控制导入或导出到文件时，OceanBase 数据库可以访问的路径，默认为 `NULL`，表示导入、导出被禁用。更多 `secure_file_priv` 的详细介绍，请参见 [secure_file_priv](../../../../../5.system-reference/2.system-variable-of-mysql-mode/115.secure_file_priv-of-mysql-mode.md)。
+       系统变量 `secure_file_priv` 用于控制导入或导出到文件时，OceanBase 数据库可以访问的路径，默认为 `NULL`，表示导入、导出被禁用。更多 `secure_file_priv` 的详细介绍，请参见 [secure_file_priv](../../../../8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/115.secure_file_priv-global.md)。
 
   * 远程 Location 格式：`LOCATION = '{oss|cos}://$ACCESS_ID:$ACCESS_KEY@$HOST/remote_file_path'`
 
@@ -241,7 +241,7 @@ SELECT info.* FROM info, ext_t3 WHERE info.name = ext_t3.name AND ext_t3.score >
 2 rows in set
 ```
 
-更多外表的查询操作，请参考 [关于查询](../../../../../3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/1.about-query-of-mysql-mode.md) 。
+更多查询操作，请参见 [读取数据](zh-CN/3.develop/5.read-data/1.read-data-of-mysql-mode/1.single-table-query-of-mysql-mode.md) 。
 
 ## 外表使用注意事项
 
@@ -253,7 +253,7 @@ SELECT info.* FROM info, ext_t3 WHERE info.name = ext_t3.name AND ext_t3.score >
 
 ## 后续操作
 
-外表创建时，系统会将 `LOCATION` 中指定路径下匹配 `PATTERN` 的文件列表保存在 OceanBase 数据库的系统表中，外表扫描时会根据该列表来访问外部文件。如果外部目录中新增了其他文件，则需要执行更新外表文件的操作，将新增文件添加到外表的文件列表中，相关操作请参见 [外部文件管理](3.manage-external-files.md)。
+外表创建时，系统会将 `LOCATION` 中指定路径下匹配 `PATTERN` 的文件列表保存在 OceanBase 数据库的系统表中，外表扫描时会根据该列表来访问外部文件。如果外部目录中新增了其他文件，则需要执行更新外表文件的操作，将新增文件添加到外表的文件列表中，相关操作请参见 [外部文件管理](3.manage-external-files-of-mysql-mode.md)。
 
 外表创建后，也可以删除，删除外表的语句与普通表相同，您使用 `DROP TABLE` 语句删除外表，详细操作可参考 [删除表](../8.delete-a-table-of-mysql-mode.md)。
 
