--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/3.collect-statistics-manually.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/3.collect-statistics-manually.md
@@ -1,10 +1,10 @@
 # 手动收集统计信息
 
-OceanBase 数据库优化器主要通过 DBMS_STATS 包 和 ANALYZE 语句两种方式手动收集统计信息。
+OceanBase 数据库优化器主要通过 `DBMS_STATS` 包 和 `ANALYZE` 语句两种方式手动收集统计信息。
 
 ## 通过 DBMS_STATS 包收集统计信息
 
-OceanBase 数据库优化器支持利用 DBMS_STATS 包收集表级、Schema 级别的统计信息和索引统计信息，分别通过调用存储过程 `gather_table_stats`、`gather_schema_stats` 和 `gather_index_stats` 来完成。
+OceanBase 数据库优化器支持利用 `DBMS_STATS` 包收集表级、Schema 级别的统计信息和索引统计信息，分别通过调用存储过程 `gather_table_stats`、`gather_schema_stats` 和 `gather_index_stats` 来完成。
 
 ```sql
 PROCEDURE gather_table_stats (
@@ -115,7 +115,7 @@ PROCEDURE GATHER_DATABASE_STATS_JOB_PROC();
 
 ### 示例
 
-DBMS_STATS 包收集统计信息的相关示例如下：
+`DBMS_STATS 包收集统计信息的相关示例如下：
 
 * 收集用户 `user` 的表 `tbl1` 的全局级别的统计信息。
 
@@ -253,7 +253,7 @@ MySQL 模式下 `ANALYZE` 语句统计信息收集示例如下：
 
 ### 非分区表的统计信息收集
 
-当表的数据量和列的个数的乘积不高于一千万时，推荐使用如下命令收集非分区表的统计信息。如下示例中 `test` 用户的表 `t1` 有 10 个列，同时数据量在一百万行。
+当表的数据量和列的个数的乘积不高于一千万时，推荐使用如下命令收集非分区表的统计信息。如下示例中表 `test.t1` 有 10 个列，同时数据量在一百万行。
 
 ```sql
 CREATE TABLE test.t1(c1 INT, c2 INT, c3 INT, c4 INT, c5 INT, c6 INT, c7 INT, c8 INT, c9 INT, c10 INT);
@@ -268,7 +268,7 @@ CALL DBMS_STATS.GATHER_TABLE_STATS('test', 't1', method_opt=>'for all columns si
 CALL DBMS_STATS.GATHER_TABLE_STATS('test', 't1');
 ```
 
-当表的数据量和列的个数的乘积超过一千万时，推荐根据数据业务情况和系统资源设置一定并行度来加快统计信息的收集。如下示例中 `test` 用户的表 `t1` 中的数据量增大到一千万行，使用 8 个并行度。
+当表的数据量和列的个数的乘积超过一千万时，推荐根据数据业务情况和系统资源设置一定并行度来加快统计信息的收集。如下示例中表 `test.t1` 中的数据量增大到一千万行，使用 8 个并行度。
 
 ```sql
 # 不收集直方图的场景
@@ -282,7 +282,7 @@ CALL DBMS_STATS.GATHER_TABLE_STATS('test', 't1', degree=>8);
 
 相比较于非分区表，分区表的统计信息收集策略需要考虑分区统计信息收集。在系统资源允许的情况下，对于分区表的统计信息收集策略，推荐将收集非分区表的并行度再额外增加一倍。
 
-如下示例中，相同场景的 `test` 用户的 `t_part` 表有 10 个列，同时数据量在一百万行。由于增加了分区统计信息的收集，因此并行度增加为 2。
+如下示例中，相同场景的 `test.t_part` 表有 10 个列，同时数据量在一百万行。由于增加了分区统计信息的收集，因此并行度增加为 2。
 
 ```sql
 CREATE TABLE t_part(c1 INT, c2 INT, c3 INT, c4 INT, c5 INT, c6 INT, c7 INT, c8 INT, c9 INT, c10 INT) PARTITION BY HASH(c1) PARTITIONS 128;
