--- a/zh-CN/7.reference/8.configuration-items-and-system-variables/2.system-variable/2.system-variable-overview.md
+++ b/zh-CN/7.reference/8.configuration-items-and-system-variables/2.system-variable/2.system-variable-overview.md
@@ -181,12 +181,16 @@
 |--------------------------------------------------------------------|----------------------------|
 | [ob_enable_sql_audit](3.global-system-variable/73.ob_enable_sql_audit-global.md) | 用于控制当前租户是否开启 SQL Audit 功能。 |
 
-## 优化器
+## 优化器相关
 
 |                                         变量名                                         |              功能描述              |
 |-------------------------------------------------------------------------------------|--------------------------------|
 | [optimizer_use_sql_plan_baselines](3.global-system-variable/105.optimizer_use_sql_plan_baselines-global.md)     | 用于控制优化器是否会使用 Plan Baseline 计划。 |
 | [optimizer_capture_sql_plan_baselines](3.global-system-variable/104.optimizer_capture_sql_plan_baselines-global.md) | 用于控制是否自动捕获新计划到 Plan Baseline。  |
+| [parallel_degree_policy](3.global-system-variable/157.parallel_degree_policy-global.md) | 用于设置并行度选择策略。 |
+| [parallel_degree_limit](3.global-system-variable/158.parallel_degree_limit-global.md) | 用于设置在使用 Auto DOP 策略时，优化器选择并行度的上限值。 |
+| [parallel_min_scan_time_threshold](3.global-system-variable/159.parallel_min_scan_time_threshold-global.md) | 设置对基表扫描进行并行处理的最小评估执行时间。 |
+| [optimizer_dynamic_sampling](3.global-system-variable/160.optimizer_dynamic_sampling-global.md) | 用于控制动态采样的等级。 |
 
 ## 数据格式
 
@@ -231,6 +235,7 @@
 | [read_only](3.global-system-variable/112.read_only-global.md)           | 用于设置租户是否为只读模式。 |
 | [ob_read_consistency](3.global-system-variable/91.ob_read_consistency-global.md) | 用于设置读一致性级别。    |
 | [tx_read_only](3.global-system-variable/133.tx_read_only-global.md)        | 用于设置是否为只读事务。   |
+| [ob_max_read_stale_time](3.global-system-variable/152.ob_max_read_stale_time-global.md) | 弱读取查询的最大延迟阈值（us）。 |
 
 ## 设置用户密码
 
@@ -242,6 +247,15 @@
 | [validate_password_number_count](3.global-system-variable/141.validate_password_number_count-global.md)       | 用于设置用户密码至少包含的数字个数。                |
 | [validate_password_policy](3.global-system-variable/142.validate_password_policy-global.md)             | 用于设置密码检查策略。                       |
 | [validate_password_special_char_count](3.global-system-variable/143.validate_password_special_char_count-global.md) | 用于设置用户密码至少包含的特殊字符个数。              |
+
+## Runtime Filter 相关
+
+|  变量名 | 功能描述 |
+|--------|---------|
+| [runtime_filter_type](3.global-system-variable/161.runtime_filter_type-global.md) | 用于设置租户级别的 Runtime Filter 类型。 |
+| [runtime_filter_wait_time_ms](3.global-system-variable/162.runtime_filter_wait_time_ms-gloabl.md) | 用于设置 Runtime Filter 的最大等待时间。 |
+| [runtime_filter_max_in_num](3.global-system-variable/163.runtime_filter_max_in_num-global.md) | 用于设置 Runtime In Filter 的 NDV （某个列中不同值的个数）个数。 |
+| [runtime_bloom_filter_max_size](3.global-system-variable/164.runtime_bloom_filter_max_size-global.md) | 用于设置 Runtime Bloom Filter 的最大使用内存，单位为字节。|
 
 ## 其他
 
