--- a/zh-CN/7.reference/8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/115.secure_file_priv-global.md
+++ b/zh-CN/7.reference/8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/115.secure_file_priv-global.md
@@ -2,23 +2,27 @@
 
 `secure_file_priv` 控制导入或导出到文件时可以访问的路径。仅 DBA 可以设置该变量，其他人无法设置。
 
+<main id="notice" type='notice'>
+  <h4>注意</h4>
+  <p>由于安全原因，只能使用通过本地 Unix Socket 连接的 Client 执行修改该全局变量的 SQL 语句。<p>
+</main>
 
 |  **属性**   | **描述**  |
 |-----------|---------|
 | 参数类型      | varchar |
 | 默认值       | NULL    |
-| 取值范围      | <li>空字符串：表示没有限制，任意路径均可以访问<li>路径名：表示仅该路径下的文件可以被导入或导出<li> `NULL`：表示导入、导出被禁用   |
+| 取值范围      | <ul><li>空字符串：表示没有限制，任意路径均可以访问   </li><li>路径名：表示仅该路径下的文件可以被导入或导出  </li><li> `NULL`：表示导入、导出被禁用  </li></ul>   |
 | 生效范围      | GLOBAL  |
 | 是否影响计划的生成 | 是       |
 | 是否可为空     | 是       |
-
-修改安全文件所在路径，指定文件所在路径名为空字符串。示例如下：
+**通过本地 Unix Socket 连接 OceanBase 数据库的示例如下**
 
 ```sql
-obclient> SET GLOBAL secure_file_priv = "";
+obclient -S /home/admin/oceanbase/run/sql.sock -u******@obtenant
 ```
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>由于安全原因，只能使用本地 Client （即：OBClient 所在机器与连接的 OBServer 节点所在机器的 IP 地址相同。）执行修改该全局变量的 SQL 语句。</p>
-  </main>
+**参数说明：**
+
+* -S：提供 本地 ObServer 节点的 Unix Socket 文件路径，位于本地 ObServer 安装目录下的run/sql.sock，默认 Unix Socket 文件路径为 `/home/admin/oceanbase/run/sql.sock`。
+* -u：提供租户的连接账户，格式为：用户名@租户名。
+* 通过 Unix Socket 方式连接时，只能连接本地 OBServer 节点，同时也需要确保该租户的资源分布在本地 OBServer 节点上，如果该租户的资源未分布在本地 OBServer 节点上，则无法通过本地 OBServer 节点连接到该租户。
